--- a/index.html
+++ b/index.html
@@ -5,28 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calendar Editor</title>
     <style>
-        body {
+        body, html {
             margin: 0;
-            height: 100vh;
+            padding: 0;
+            height: 100%;
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
+
+        body {
             display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
+            justify-content: center;
             align-items: center;
-            background-color: black;
-            color: white;
-            font-family: Arial, sans-serif;
+            background: linear-gradient(135deg, #f5f7fa 0%, #e4e7eb 100%);
             overflow: hidden;
         }
 
-        #header {
+        .calendar-container {
+            position: relative;
             width: 80%;
+            max-width: 600px;
+            padding: 20px;
+            background: rgba(255, 255, 255, 0.6);
+            backdrop-filter: blur(10px);
+            box-shadow: 0 8px 32px rgba(31, 38, 135, 0.15);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            border-radius: 20px;
+            color: rgba(0, 0, 0, 0.8);
+        }
+
+        #header {
+            width: 100%;
             display: flex;
             justify-content: space-between;
             align-items: flex-start;
             padding: 10px;
             box-sizing: border-box;
-            position: relative;
-            top: 0;
         }
 
         #date-container {
@@ -36,32 +51,64 @@
         #date, #day-name, #month-name {
             font-size: 24px;
             margin: 0;
-            line-height: 1.2; /* Adjust line height to match text editor */
+            line-height: 1.2;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         }
 
         #editor {
-            width: 80%;
-            height: calc(100% - 40px); /* Adjust height to leave space for header */
+            width: 100%;
+            height: calc(100% - 60px);
             border: none;
             outline: none;
             white-space: pre-wrap;
             word-wrap: break-word;
             overflow-y: auto;
-            margin-top: 0; /* No additional margin-top */
+            margin-top: 10px;
             box-sizing: border-box;
-            font-size: 26px; /* Slightly larger font size for editor text */
+            font-size: 26px;
+            background: transparent;
+            color: inherit;
+            padding: 10px;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
+        }
+
+        .clickable {
+            cursor: pointer;
+            transition: text-decoration 0.3s ease;
+        }
+
+        .clickable:hover {
+            text-decoration: underline;
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 480px) {
+            .calendar-container {
+                width: 90%;
+                padding: 15px;
+            }
+
+            #date, #day-name, #month-name {
+                font-size: 20px;
+            }
+
+            #editor {
+                font-size: 22px;
+            }
         }
     </style>
 </head>
 <body>
-    <div id="header">
-        <div id="date-container">
-            <div id="date"></div>
-            <div id="month-name"></div>
+    <div class="calendar-container">
+        <div id="header">
+            <div id="date-container">
+                <div id="date"></div>
+                <div id="month-name"></div>
+            </div>
+            <div id="day-name"></div>
         </div>
-        <div id="day-name"></div>
+        <div id="editor" contenteditable="true"></div>
     </div>
-    <div id="editor" contenteditable="true"></div>
     <script>
         const editor = document.getElementById('editor');
         const dayNameElement = document.getElementById('day-name');
